crates/etas_tests/fixtures/compiler/projects/negative/entry_return_type_mismatch/src/app/main.es
module app.main;

flow main(args: Array<string>) -> string ![]
{
    return "not an exit code";
}
